feat: added links to rs and git

--- a/travel/index.html
+++ b/travel/index.html
@@ -201,6 +201,14 @@
         </main>
         <footer>
             <div class="footer_content">
+                <ul class="footer_links_rs_git">
+                    <li>
+                        <a href="https://rs.school/js/"><img src="./images/rs.svg" alt="rsschool"></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/AlenaZezyulchik"><img src="./images/git.svg" alt="github"></a>
+                    </li>
+                </ul>
                 <div class="footer_content_text">All Rights Reserved © Travel Portal</div>
                 <ul class="footer_links_to_social_networks">
                     <li>
@@ -212,6 +220,7 @@
                     <li>
                         <a href="https://twitter.com/"><img src="./images/twitter.svg" alt="twitter"></a>
                     </li>
+                </ul>
             </div>
         </footer>
 
