fix: fixed responsive layout bugs

--- a/travel/index.html
+++ b/travel/index.html
@@ -85,7 +85,7 @@
                 <div class="steps_content">
                     <h2>3 STEPS TO THE PERFECT TRIP</h2>
                     <div class="steps_content_items">
-                        <div class=steps_content_item>
+                        <div class="steps_content_item item_bike">
                             <div class="steps_content_item_bike">
                                 <img class="bike" src="./images/bike.svg" alt="bike">
                                 <img class="steps_content_item_adaptive " src="./images/bike_adaptive.svg" alt="bike">
@@ -94,7 +94,7 @@
                                 Tell us what you want to do
                             </div>
                         </div>
-                        <div class="steps_content_item">
+                        <div class="steps_content_item item_calendar">
                             <div class="steps_content_item_calendar">
                                 <img class="calendar" src="./images/calendar.svg" alt="calendar">
                                 <img class="steps_content_item_adaptive" src="./images/calendar_adaptive.svg" alt="calendar">
@@ -103,7 +103,7 @@
                                 Share us preferable dates
                             </div>
                         </div>
-                        <div class="steps_content_item">
+                        <div class="steps_content_item item_plain">
                             <div class="steps_content_item_plain">
                                 <img class="plain" src="./images/plain.svg" alt="plain">
                                 <img class="steps_content_item_adaptive" src="./images/plain_adaptive.svg" alt="plain">
