fix: fix error in adaptive menu

--- a/travel/index.html
+++ b/travel/index.html
@@ -240,9 +240,8 @@
                 </ul>
                 <div class="footer_content_text">All Rights Reserved © Travel Portal</div>
                 <ul class="footer_links_to_social_networks">
-                    <a id="socialmedia"></a>
                     <li>
-                        <a href="https://www.instagram.com"><img src="./images/instadram.svg" alt="instadram"></a>
+                        <a id="socialmedia" href="https://www.instagram.com"><img src="./images/instadram.svg" alt="instadram"></a>
                     </li>
                     <li>
                         <a href="https://www.youtube.com/"><img src="./images/you_tube.svg" alt=you_tube></a>
