--- a/travel/index.html
+++ b/travel/index.html
@@ -119,37 +119,39 @@
                 <a id="destinations"></a>
                 <div class="destinations_content">
                     <h2>POPULAR DESTINATIONS</h2>
-                    <div class="destinations_slider">
-                        <div class="destinations_slider_spain">
-                            <img class="destinations_slider_original" src="./images/spain.jpg" alt="spain">
-                            <img class="destinations_slider_adaptive" src="./images/spain_adaptive.jpg" alt="spain">
-                            <div class="destinations_slider_text">SPAIN</div>
+                    <div class="wrapper_slider">
+                        <div class="destinations_slider">
+                            <div class="destinations_slider_image destinations_slider_spain">
+                                <img class="destinations_slider_original" src="./images/spain.jpg" alt="spain">
+                                <img class="destinations_slider_adaptive" src="./images/spain_adaptive.jpg" alt="spain">
+                                <div class="destinations_slider_text">SPAIN</div>
+                            </div>
+                            <div class="destinations_slider_image destinations_slider_japan">
+                                <img class="destinations_slider_original" src="./images/japan.jpg" alt="japan">
+                                <img class="destinations_slider_adaptive" src="./images/japan_adaptive.jpg" alt="japan">
+                                <div class="destinations_slider_text">JAPAN</div>
+                            </div>
+                            <div class="destinations_slider_image destinations_slider_usa">
+                                <img class="destinations_slider_original" src="./images/USA.jpg" alt="usa">
+                                <img class="destinations_slider_adaptive" src="./images/USA_adaptive.jpg" alt="usa">
+                                <div class="destinations_slider_text">USA</div>
+                            </div>
                         </div>
-                        <div class="destinations_slider_japan">
-                            <img class="destinations_slider_original" src="./images/japan.jpg" alt="japan">
-                            <img class="destinations_slider_adaptive" src="./images/japan_adaptive.jpg" alt="japan">
-                            <div class="destinations_slider_text">JAPAN</div>
-                        </div>
-                        <div class="destinations_slider_usa">
-                            <img class="destinations_slider_original" src="./images/USA.jpg" alt="usa">
-                            <img class="destinations_slider_adaptive" src="./images/USA_adaptive.jpg" alt="usa">
-                            <div class="destinations_slider_text">USA</div>
-                        </div>
-                        <div class="slider_arrows">
+                       
                             <div class="slider_arrow left">
                                 <img src="./images/slider_arrow_left.svg" alt="left">
                             </div>
                             <div class="slider_arrow right">
                                 <img src="./images/slider_arrow_right.svg" alt="right">
                             </div>
-                        </div>
+                        
                     </div>
                     <div class="destinations_circles">
-                        <div class="circle_1">
+                        <div class="circle circle_1">
                         </div>
-                        <div class="circle_2">
+                        <div class="circle circle_2 active_dot">
                         </div>
-                        <div class="circle_3">
+                        <div class="circle circle_3">
                         </div>
                     </div>
                     <div class="destinations_button">
