--- a/travel/index.html
+++ b/travel/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./images/icon.svg" type="image/svg">
 </head>
 
@@ -40,10 +41,10 @@
                                 <a href="#travelstories">Travel Stories</a>
                             </li>
                             <li class="menu_header_adaptive">
-                                <a href="">Account</a>
+                                <a class="menu_header_adaptive_link" href="#">Account</a>
                             </li>
                             <li class="menu_header_adaptive">
-                              <a href="#socialmedia">Social media</a>  
+                                <a href="#socialmedia">Social media</a>
                             </li>
                         </ul>
                     </nav>
@@ -62,6 +63,73 @@
         </header>
 
         <main>
+            <div class="overlay_login">
+            </div>
+            <div class="wrapper_reg">
+                <div class="wrapper_login">
+                    <div class="login_content">
+                        <div class="login_content_title">
+                            <span>Log in to your account</span>
+                        </div>
+                        <div class="buttons_sign_in_with">
+                            <button class="sign_in_with facebook button"><img class="button_sing_in_img" src="./images/Facebook Logo.svg" alt="facebook">Sign In with Facebook</button>
+                            <button class="sign_in_with google button"><img class="button_sing_in_img" src="./images/googl.svg" alt="google">Sign In with Google</button>
+                            <div class="login_content_hr">
+                                <div class="hr">
+                                    <hr>
+                                </div>
+                                <div><span>or</span></div>
+                                <div class="hr">
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="inputs_sign_in">
+                            <div class="block_input e-mail">
+                                <div class="block_input_text">E-mail</div>
+                                <input class="input_e-mail" type="text" value=" ">
+                            </div>
+                            <div class="block_input password">
+                                <div class="block_input_text">Password</div>
+                                <input class="input_password" type="text" value=" ">
+                            </div>
+                            <div class="block_button">
+                                <button class="button" id="button_sign_in">Sign In</button>
+                            </div>
+                            <div class="block_input_text text_center"><a href="#">Forgot Your Password?</a>
+                            </div>
+                            <div class="block_input_line">
+                                <hr>
+                            </div>
+                            <div class="block_input_text text_center">Don&#8217;t have an account? <a class="block_input_link create_account" href="#">Register</a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="wrapper_create_account">
+                    <div class="login_content">
+                        <div class="login_content_title">
+                            <span>Create account</span>
+                        </div>
+                        <div class="inputs_sign_in">
+                            <div class="block_input e-mail">
+                                <div class="block_input_text">E-mail</div>
+                                <input class="input_create_e-mail" type="text" value=" ">
+                            </div>
+                            <div class="block_input password">
+                                <div class="block_input_text">Password</div>
+                                <input class="input_create_password" type="text" value=" ">
+                            </div>
+                            <div class="block_button">
+                                <button class="button" id="button_sign_up">Sign Up</button>
+                            </div>
+                            <div class="block_input_line">
+                                <hr>
+                            </div>
+                            <div class="block_input_text text_center">Already have an account? <a class="block_input_link lod_in" href="#">Log in</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <section class="preview">
                 <a id="howitworks"></a>
                 <div class="preview_content">
@@ -137,14 +205,14 @@
                                 <div class="destinations_slider_text">USA</div>
                             </div>
                         </div>
-                       
-                            <div class="slider_arrow left">
-                                <img src="./images/slider_arrow_left.svg" alt="left">
-                            </div>
-                            <div class="slider_arrow right">
-                                <img src="./images/slider_arrow_right.svg" alt="right">
-                            </div>
-                        
+
+                        <div class="slider_arrow left">
+                            <img src="./images/slider_arrow_right.svg" alt="left">
+                        </div>
+                        <div class="slider_arrow right">
+                            <img src="./images/slider_arrow_right.svg" alt="right">
+                        </div>
+
                     </div>
                     <div class="destinations_circles">
                         <div class="circle circle_1">
@@ -168,56 +236,60 @@
                     <div class="stories_content_items">
                         <div class="stories_content_item">
                             <div class="stories_content_photo">
-                                <img class= "stories_content_photo_img" src="./images/story_1.jpg" alt="story">
-                                <img class= "stories_content_photo_adaptive" src="./images/story_1_adaptive.jpg" alt="story">
+                                <img class="stories_content_photo_img" src="./images/story_1.jpg" alt="story">
+                                <img class="stories_content_photo_adaptive" src="./images/story_1_adaptive.jpg" alt="story">
                             </div>
                             <div class="stories_description_block">
                                 <h3>10 Photos of Attractive Thailand</h3>
                                 <div class="stories_desctiption_text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem ipsum dolor sit a<span class="stories_text_close">met,
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem
+                                    ipsum dolor sit a<span class="stories_text_close">met,
                                         consectetur adipiscing elit</span>... <a href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
                         <div class="stories_content_item">
                             <div class="stories_content_photo">
-                                <img class= "stories_content_photo_img" src="./images/story_2.jpg" alt="story">
-                                <img class= "stories_content_photo_adaptive" src="./images/story_2_adaptive.jpg" alt="story">
+                                <img class="stories_content_photo_img" src="./images/story_2.jpg" alt="story">
+                                <img class="stories_content_photo_adaptive" src="./images/story_2_adaptive.jpg" alt="story">
                             </div>
                             <div class="stories_description_block">
                                 <h3>Canyonlands National Park, Utah</h3>
                                 <div class="stories_desctiption_text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem ipsum dolor sit a<span class="stories_text_close">met,
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem
+                                    ipsum dolor sit a<span class="stories_text_close">met,
                                         consectetur adipiscing elit</span>... <a href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
                         <div class="stories_content_item">
                             <div class="stories_content_photo">
-                                <img class= "stories_content_photo_img" src="./images/story_3.jpg" alt="story">
-                                <img class= "stories_content_photo_adaptive" src="./images/story_3_adaptive.jpg" alt="story">
+                                <img class="stories_content_photo_img" src="./images/story_3.jpg" alt="story">
+                                <img class="stories_content_photo_adaptive" src="./images/story_3_adaptive.jpg" alt="story">
                             </div>
                             <div class="stories_description_block">
                                 <h3>I left my heart in the Mountains!</h3>
                                 <div class="stories_desctiption_text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem ipsum dolor sit a<span class="stories_text_close">met,
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem
+                                    ipsum dolor sit a<span class="stories_text_close">met,
                                         consectetur adipiscing elit</span>... <a href="#">Read More</a>
                                 </div>
                             </div>
                         </div>
                         <div class="stories_content_item">
                             <div class="stories_content_photo">
-                                <img class= "stories_content_photo_img" src="./images/story_4.jpg" alt="story">
-                                <img class= "stories_content_photo_adaptive" src="./images/story_4_adaptive.jpg" alt="story">
+                                <img class="stories_content_photo_img" src="./images/story_4.jpg" alt="story">
+                                <img class="stories_content_photo_adaptive" src="./images/story_4_adaptive.jpg" alt="story">
                             </div>
                             <div class="stories_description_block">
                                 <h3>The Longest journey in my life!</h3>
                                 <div class="stories_desctiption_text">
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem ipsum dolor sit a<span class="stories_text_close">met,
+                                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<span class="stories_text_close"> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</span>.Lorem
+                                    ipsum dolor sit a<span class="stories_text_close">met,
                                         consectetur adipiscing elit</span>... <a href="#">Read More</a>
                                 </div>
                             </div>
